# ash

./: Makefile  README.md  ash_cmd.c  ffconf.h  hexapod.c  hexapod_v2.c  ini.c  ini.h  lcd.c  lcd.h  leg.h  legs_solver.h  maestro.c  maestro.h  ps2controller.c  ps2controller.h  sdmm.c  settings.h  settings.sublime-workspace  vec.h  walkpatterns.c  walkpatterns.h
board/: .~lock.parts.odf.ods#  controller.dch  controller.dip  controller.dipb0  elecrow.sh  leg_distr.dch  leg_distr.dip  parts.csv  parts.csv~  parts.odf.ods
board/export/: hexapod.gbl  hexapod.gbo  hexapod.gbs  hexapod.gml  hexapod.gtl  hexapod.gto  hexapod.gts  hexapod.txt
controller_mk2/: controller_mk2.pro
controller_mk2/super_sensor_array/: super_sensor_array.pro
gpa/: servo.h
hexapod_mk2/linalg_matlab/: circle.m  drawrobot.m  hexapod.m  playwav.py  serenade.m  test.m
hexapod_mk2/linalg_test/: CMakeLists.txt  main.c  testext.c  testext.h
hexapod_mk2/linalg_test/linalg/: linalg.c  linalg.h  linalg_utils.h
hexapod_mk2/raspberry/: config.gmd  gmd.py  korra.py  korra_module.py
hexapod_mk2/raspberry/dummy/: dummy.py
hexapod_mk2/raspberry/korra_vfs/: korra_vfs.py  vfs.py
hexapod_mk2/raspberry/sound/: sound.py  test.adf
hexapod_mk2/src/: CMakeLists.txt  main.c
hexapod_mk2/src/movement/: gait.c  gait.h  leg.c  leg.h  linalg.c  linalg.h  movement.h
hexapod_mk2/src/servos/: gpa_servos.c  gpa_servos.h
ik/: ik_calc.m  ik_test.m  plot_angles.m
raspberry_pi/: ash_edit.sh  ash_track.py  gpa_png_to_hex.py  hw.py  out.h  out.hex  sound2.py  track.py  uart_test.py
raspberry_pi/ai/: ash.gmd  core.py  gmd.py  terminal.py  test.gmd
raspberry_pi/ai/modules/: camera.py  module.py  sound.py
raspberry_pi/ai/tasks/: task.py
(+1 files in other folders)
